# uber_demand_prediction

./: .gitignore  Makefile  README.md  app.py  dockerfile  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  run_information.json
.dvc/: config
.github/workflows/: ci.yaml
deploy/scripts/: start_docker.sh
docs/: mkdocs.yml
docs/docs/: index.md
mlruns/0/: meta.yaml
mlruns/0/163150004bd940038e2c80050aa3da48/: meta.yaml
mlruns/0/163150004bd940038e2c80050aa3da48/tags/: mlflow.runName
mlruns/0/3d9ce2935b1b423e9b2662783f7cec5b/: meta.yaml
mlruns/0/3d9ce2935b1b423e9b2662783f7cec5b/tags/: mlflow.runName
mlruns/0/adca4708359542ba8d842a4b07d3dd90/: meta.yaml
mlruns/0/adca4708359542ba8d842a4b07d3dd90/tags/: mlflow.runName
mlruns/0/e040945e4dbd41f7ac759cf7f484c2cf/: meta.yaml
mlruns/0/e040945e4dbd41f7ac759cf7f484c2cf/tags/: mlflow.runName
mlruns/0/fa8eb680e34f44578b01ca0ee04adac2/: meta.yaml
mlruns/0/fa8eb680e34f44578b01ca0ee04adac2/tags/: mlflow.runName  mlflow.source.git.commit  model
mlruns/models/uber demand prediction/: meta.yaml
notebooks/: Plot-Map.ipynb  promote_model_to_production.py
src/data/: data_injection.py
src/feature_engineering/: feature_extraction.py  feature_processing.py
src/model/: .gitignore  model_evaluation.py  register_model.py  train.py
tests/: test_model_perf.py  test_model_registry.py
