[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "uber_demand_prediction"
version = "0.0.1"
description = "ML Model for predict demand for uber"
authors = [
  { name = "amit" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["uber_demand_prediction"]
include = ["pyproject.toml", "uber_demand_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["uber_demand_prediction"]
force-sort-within-sections = true

